outputs/ndx-test/eoh/2025-07-28_20-50-00/evaluations/problem_eval-1958609391141069337_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/ndx/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rjj/reevo/problems/ndx/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/rjj/reevo/problems/ndx/tmp/gpt_temp_7_c9965b51.py", line 1
    defined as the percentage change in closing price over a 20-day period, and adjusting this measure by subtracting the average of the positive daily returns over the same period to better capture the underlying trend.}
                                                                                                                                                                                                                            ^
SyntaxError: unmatched '}'
